--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
     "antd": "^4.6.2",
+    "axios": "^0.20.0",
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "react": "^16.13.1",
