--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.20.0",
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
