--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-REACT_APP_BASE_PATH=http://localhost:5000
+// REACT_APP_BASE_PATH=http://localhost:5000
+REACT_APP_BASE_PATH=https://fantabigolo.herokuapp.com
 // export const BASE_PATH = 'https://fantabigolo.herokuapp.com';
 // export const BASE_PATH = 'http://localhost:5000';
