--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@ant-design/icons": "^4.2.2",
     "antd": "^4.6.2",
     "axios": "^0.20.0",
+    "i18next": "^19.7.0",
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-i18next": "^11.7.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
