--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
         "react/forbid-prop-types": 0,
         "jsx-a11y/anchor-is-valid": 2,
         "react-hooks/rules-of-hooks": "error",
-        "react/jsx-filename-extension": "off"
+        "react/jsx-filename-extension": "off",
+        "react-hooks/exhaustive-deps": "off"
     }
 }
