--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,8 +14,14 @@
     "rules": {
         "linebreak-style": 0,
         "react/forbid-prop-types": 0,
-        "jsx-a11y/anchor-is-valid": 2,
+        "jsx-a11y/anchor-is-valid": "off",
         "react-hooks/rules-of-hooks": "error",
-        "react/jsx-filename-extension": "off"
+        "react/jsx-filename-extension": "off",
+        "react/jsx-props-no-spreading": "off",
+        "import/prefer-default-export": "off",
+        "object-curly-newline": "off",
+        "react/jsx-one-expression-per-line-curly-newline": "off",
+        "react/no-unescaped-entities": "off",
+        "react/jsx-one-expression-per-line": "off"
     }
 }
