--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
         "react-hooks/rules-of-hooks": "error",
         "react/jsx-filename-extension": "off",
         "react/jsx-props-no-spreading": "off",
+        "object-curly-spacing": "off",
         "import/prefer-default-export": "off",
         "object-curly-newline": "off",
         "react/jsx-one-expression-per-line-curly-newline": "off",
