--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^5.0.0-alpha.27",
     "axios": "^0.21.1",
     "formik": "^2.2.6",
     "i18next": "^19.9.2",
