--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-i18next": "^11.8.10",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.2",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "redux": "^4.0.5",
